# karaoke-score

./: README.md  a.txt  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ACFPitchDetector.cpp  ACFPitchDetector.hpp  AudioDecoder.cpp  AudioDecoder.hpp  CepstrumPitchDetector.cpp  CepstrumPitchDetector.hpp  KaraokeScore.cpp  KaraokeScore.hpp  NoteItem.h  PitchDetector.hpp  PitchUtil.cpp  PitchUtil.hpp  PrecisionRecallScore.cpp  PrecisionRecallScore.hpp  smtown_ai_karaokescore_KaraokeScore.cpp
app/src/main/java/: smtown_ai_karaokescore_KaraokeScore.h
